set_standard_format_for_stats_posts
Rework posts on stats lectures to have a standard layout

--- a/StanfordStats191Review.ipynb
+++ b/StanfordStats191Review.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "This is a re-creation of the Stanford Stats 191 course (https://web.stanford.edu/class/stats191/), using Python eco-system tools, instead of R.\n",
+    "This is a re-creation of the Stanford Stats 191 course (https://web.stanford.edu/class/stats191/), using Python eco-system tools, instead of R.  This the lecture \"Course introduction and review\" (see https://web.stanford.edu/class/stats191/notebooks/Review.html).\n",
     "\n",
     "I found the STATS191 course pitched at just the right level for me (who can dimly remember my Uni stats courses).  The only drawback was that all the examples were in R, not Python.  So I decided to redo the course material using Python eco-system tools.\n",
     "\n",
