--- a/StanfordStats191SimpleLinearRegression.ipynb
+++ b/StanfordStats191SimpleLinearRegression.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "This is a re-creation of the Stanford Stats 191 course, using Python eco-system tools, instead of R. This is lecture \"Simple linear regression\".  See the previous blog posts for my motivation."
+    "This is a re-creation of the Stanford Stats 191 course, using Python eco-system tools, instead of R. This is lecture \"Simple linear regression\"  (https://web.stanford.edu/class/stats191/notebooks/Simple_linear_regression.html).  See the previous blog posts for my motivation."
    ]
   },
   {
