--- a/LightMeterDescription.ipynb
+++ b/LightMeterDescription.ipynb
@@ -77,39 +77,54 @@
    "source": [
     "### Bill of Material\n",
     "\n",
-    "A bill of material is automatically produced by Fritzing, as a by-product of drawing the breaddboard layout above"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"700\"\n",
-       "            height=\"600\"\n",
-       "            src=\"images/LightSensor_bom.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x23b07e02fd0>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.display import IFrame\n",
-    "IFrame(src='images/LightSensor_bom.html', width=700, height=600)"
+    "A bill of material is automatically produced by Fritzing, as a by-product of drawing the breaddboard layout above\n",
+    "\n",
+    "\n",
+    "<table>\n",
+    "\n",
+    "  <thead>\n",
+    "   <tr>\n",
+    "    <th>Label</th>\n",
+    "    <th>Part Type</th>\n",
+    "    <th>Properties</th>\n",
+    "    </tr>\n",
+    "  </thead>\n",
+    "  <tbody>\n",
+    "  <tr>\n",
+    "    <td>LCD1</td>\n",
+    "    <td>LCD screen</td>\n",
+    "    <td class=\"props\">pins 16; type Character</td>\n",
+    "</tr><tr>\n",
+    "    <td>LED1</td>\n",
+    "    <td>Red (633nm) LED</td>\n",
+    "    <td class=\"props\">leg yes; package 5 mm [THT]; color Red (633nm)</td>\n",
+    "</tr><tr>\n",
+    "    <td>Part1</td>\n",
+    "    <td>Arduino Uno (Rev3)</td>\n",
+    "    <td class=\"props\">type Arduino UNO (Rev3)</td>\n",
+    "</tr><tr>\n",
+    "    <td>Part2</td>\n",
+    "    <td>Ambient Light Sensor (TEMT6000 Breakout Board)</td>\n",
+    "    <td class=\"props\">lilypad No</td>\n",
+    "</tr><tr>\n",
+    "    <td>R1</td>\n",
+    "    <td>10k Resistor</td>\n",
+    "    <td class=\"props\">tolerance ±5%; pin spacing 400 mil; package THT; resistance 10k; bands 4</td>\n",
+    "</tr><tr>\n",
+    "    <td>R2</td>\n",
+    "    <td>Rotary Potentiometer (Small)</td>\n",
+    "    <td class=\"props\">size Rotary - 9mm; maximum resistance 10k; package THT; track Linear; type Rotary Shaft Potentiometer</td>\n",
+    "</tr><tr>\n",
+    "    <td>S1</td>\n",
+    "    <td>Taiway 100-SP-X-T1 SPDT Miniature Toggle Switch</td>\n",
+    "    <td class=\"props\">switching circuit SPDT; package THT; variant - through hole PC terminals; part # 100-SP-X-T1-0-0-B1-M2</td>\n",
+    "</tr><tr>\n",
+    "    <td>VCC1</td>\n",
+    "    <td>Battery block 9V</td>\n",
+    "    <td class=\"props\">voltage 9V</td>\n",
+    "</tr>\n",
+    "  </tbody>\n",
+    "</table>\n"
    ]
   },
   {
